examples/test/testpolicy633.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy633
  namespace: namespace134
spec:
  podSelector:
    matchLabels:
      key20: value25
      key39: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value8
          key44: value5
      podSelector:
        matchLabels:
          key22: value31
          key41: value0
          key30: value35
